--- a/index.html
+++ b/index.html
@@ -7,6 +7,22 @@
     <title>HTML Images</title>
   </head>
   <body>
-    <!-- Your code here -->
+    
+    <img
+  src="https://i.pinimg.com/236x/f8/4a/67/f84a67959cb832953d6682047520065a.jpg"
+  alt="Wooyoung"
+  title="K-pop next gen of music"
+/>
+
+<img
+src="https://i.pinimg.com/236x/49/56/18/4956189a6f28f0e1bc0616a406057234.jpg"
+alt="The8"
+title="Chineese k-pop musician"
+/>
+<img
+src="https://i.pinimg.com/236x/6c/84/ba/6c84ba8c0791f5807995589a3a8a6f5d.jpg"
+alt="Joshua"
+title="Seventeen vocal members"
+/>
   </body>
 </html>
